# CodeGrapher-AI

./: .gitignore  README.md  app.py  config.py  experience.txt  inspect_lib.py  logging_config.py  pyproject.toml  requirements.txt  worker.py
codegrapher_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
engine/: agent.py  chain.py  context.py  graph.py  rag.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: ChatWindow.tsx  DeerLoader.tsx  EmptyState.tsx  Header.tsx  JobStatus.tsx  Message.tsx  Sidebar.tsx  WelcomeScreen.tsx
frontend/src/components/ui/: confirmation-dialog.tsx  rename-dialog.tsx  tooltip.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: Index.tsx  NotFound.tsx
frontend/src/types/: prismjs.d.ts
scripts/: build_graph.py  build_index.py
templates/: index.html
tests/: Dockerfile
tests/engine/: test_agent.py
tests/tools/: test_code_graph.py  test_file_system.py
tools/: bug_fixer.py  code_graph.py  file_system.py  refactor.py  test_generator.py  test_runner.py  utils.py
