# --- pyproject.toml ---

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codegrapher-ai"
version = "0.1.0"
description = "An AI agent for code analysis using RAG and agents."
requires-python = ">=3.9"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
py-modules = ["config", "logging_config"]
packages = ["engine", "tools"]

# ADD THIS SECTION
[tool.pytest.ini_options]
norecursedirs = [".venv", "target_repo"]